# tvboptim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: docs.yml  publish-pypi.yml  python-package.yml  ruff.yml
docs/: .gitignore  BUILDING.md  JR.html  RWW.html  _quarto.yml  _sidebar.yml  api.html  build_docs.sh  clean-notebooks.py  convert-workflows.sh  custom.css  get_started.html  index.html  index.qmd  objects.json  quartodoc.json  search.json
docs/advanced/: buffer_strategies.ipynb  buffer_strategies.qmd  coupling_freezing.qmd  gradient_checkpointing.ipynb  gradient_checkpointing.qmd  streaming_reductions.qmd  subspace_coupling.ipynb  subspace_coupling.qmd
docs/basics/: axes_and_spaces.qmd  get_started.qmd  parameters_and_optimization.qmd
docs/network_dynamics/: coupling.qmd  dynamics.qmd  external_inputs.qmd  graph.qmd  heterogeneous_networks.qmd  network_dynamics.qmd  noise.qmd  references.bib  solvers.qmd
docs/reference/: Parameter.html  execution.ParallelExecution.html  execution.SequentialExecution.html  execution.html  index.html  jaxify.html  model.html  model.jaxify.html  optim.OptaxOptimizer.html  optim.callbacks.html  optim.html  optim.optax.html  spaces.DataSpace.html  spaces.GridSpace.html  spaces.UniformSpace.html  spaces.html  types.spaces.html  types.stateutils.html  utils.caching.html  utils.utils.html
docs/workflows/: Delay_Speed_Synchronization.qmd  EI_Tuning.ipynb  EI_Tuning.qmd  Hopf_Pareto_ParallelOpt.ipynb  Hopf_Pareto_ParallelOpt.qmd  JR.ipynb  JR.qmd  RWW.ipynb  RWW.qmd  Stimulation_with_Bayesian_Inference.ipynb  Stimulation_with_Bayesian_Inference.qmd  TBPTT.qmd
scripts/: test_RWW_sigmoidboundedparameter.py
src/tvboptim/: __init__.py  execution.py  model.py
tests/: test_execution.py  test_identifiability.py  test_optax_optimizer_toy.py  test_wrap_composition.py
tests/test_network_dynamics/: __init__.py  coupling_message_passing_oracle.py  test_adiabatic_scan.py  test_basic_dynamics.py  test_basic_networks.py  test_coupling_contract.py  test_coupling_freezing.py  test_coupling_message_passing_baseline.py  test_coupling_message_passing_oracle.py  test_coupling_orientation.py  test_coupling_signal_seam.py  test_coupling_transport.py  test_delayed_message_passing.py  test_edge_parameter_coupling.py  test_execution_integration.py  test_graph_edge_contract.py  test_group_parameterization.py  test_grouped_solution.py  test_heterogeneous_delays.py  test_heterogeneous_drives.py  test_heterogeneous_input_readout.py  test_heterogeneous_network.py  test_heterogeneous_oracles.py  test_heterogeneous_performance_structure.py  test_heterogeneous_routing.py  test_heterogeneous_solution.py  test_heterogeneous_space.py  (+10 more)
(+132 files in other folders)
